--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,11 @@
         "fideloper/proxy": "^4.0",
         "fzaninotto/faker": "^1.9",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "orchestra/parser": "3.8",
+        "socialiteproviders/facebook": "^1.0",
+        "socialiteproviders/github": "^1.0",
+        "socialiteproviders/vkontakte": "^4.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.4",
