--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,14 @@
         "fideloper/proxy": "^4.0",
         "fzaninotto/faker": "^1.9",
         "laravel/framework": "5.8.*",
+        "laravel/helpers": "^1.3",
         "laravel/tinker": "^1.0",
         "orchestra/parser": "3.8",
+        "predis/predis": "^1.1",
         "socialiteproviders/facebook": "^1.0",
         "socialiteproviders/github": "^1.0",
-        "socialiteproviders/vkontakte": "^4.1"
+        "socialiteproviders/vkontakte": "^4.1",
+        "unisharp/laravel-filemanager": "^2.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.4",
